--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
+    "lazy-input": "^2.0.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
