--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = vendor/bootstrap
 	url = https://github.com/twbs/bootstrap.git
 	branch = v4-dev
+[submodule "vendor/Font-Awesome"]
+	path = vendor/Font-Awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
