--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "sqlite3": "^3.1.4",
     "webpack": "^1.13.1",
     "zip-array": "^1.0.1"
+  },
+  "dependencies": {
+    "argparse": "^1.0.7"
   }
 }
