--- a/package.json
+++ b/package.json
@@ -7,31 +7,31 @@
   "license": "MIT",
   "devDependencies": {
     "@kchmck/redux-history-utils": "^1.0.0",
-    "@kchmck/simple-router": "^1.0.1",
-    "axios": "^0.13.0",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.10.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
+    "@kchmck/simple-router": "^1.0.2",
+    "argparse": "^1.0.9",
+    "axios": "^0.16.2",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.11.0",
-    "babel-register": "^6.9.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "classnames": "^2.2.5",
-    "eslint": "^3.1.1",
+    "eslint": "^4.1.0",
     "eslint-plugin-react": "^5.2.2",
     "history": "^3.0.0",
     "koa": "^1.2.0",
     "koa-favicon": "^1.2.1",
-    "koa-handlebars": "^0.5.7",
+    "koa-handlebars": "^1.0.0",
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "lazy-input": "^2.0.0",
     "marked": "^0.3.5",
-    "mocha": "^2.5.3",
-    "node-sass": "^3.8.0",
+    "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.9.2",
     "query-string": "^4.2.2",
     "react": "^15.2.1",
@@ -44,9 +44,7 @@
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4",
     "webpack": "^1.13.1",
+    "yarn": "^0.16.1",
     "zip-array": "^1.0.1"
-  },
-  "dependencies": {
-    "argparse": "^1.0.7"
   }
 }
