--- a/package.json
+++ b/package.json
@@ -6,41 +6,35 @@
   "author": "Mick Koch <mick@kochm.co>",
   "license": "MIT",
   "devDependencies": {
-    "@kchmck/redux-history-utils": "^1.0.0",
-    "@kchmck/simple-router": "^1.0.2",
+    "@kchmck/simple-router": "^2.0.0",
     "argparse": "^1.0.9",
     "axios": "^0.16.2",
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "classnames": "^2.2.5",
     "eslint": "^4.1.0",
-    "eslint-plugin-react": "^5.2.2",
     "history": "^3.0.0",
+    "inferno": "^3.6.1",
+    "inferno-component": "^3.6.1",
+    "inferno-hyperscript": "^3.6.1",
+    "inferno-mobx": "^3.6.1",
     "koa": "^1.2.0",
     "koa-favicon": "^1.2.1",
     "koa-handlebars": "^1.0.0",
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
-    "lazy-input": "^2.0.0",
     "marked": "^0.3.5",
+    "mobx": "^3.1.16",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "nodemon": "^1.9.2",
     "query-string": "^4.2.2",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.1.0",
-    "shallow-equals": "0.0.0",
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4",
     "webpack": "^1.13.1",
