--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-    "presets": ["es2015", "stage-2"]
+    "presets": [
+        ["env", {
+            "targets": {
+                "browsers": "firefox >= 54",
+                "node": "current"
+            },
+            "useBuiltins": true
+        }],
+        "stage-2"
+    ]
 }
