--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
@@ -37,6 +38,7 @@
     "query-string": "^4.2.2",
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4",
+    "uglify-es-webpack-plugin": "^0.0.2",
     "webpack": "^3.0.0",
     "zip-array": "^1.0.1"
   }
