--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4",
     "uglify-es-webpack-plugin": "^0.0.2",
-    "webpack": "^3.0.0",
-    "zip-array": "^1.0.1"
+    "webpack": "^3.0.0"
   }
 }
