--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4",
     "uglify-es-webpack-plugin": "^0.0.2",
-    "webpack": "^3.2.0"
+    "webpack": "^3.2.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
