--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
-    "mobx": "^3.1.16",
+    "mobx": "3.1.16",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "nodemon": "^1.9.2",
